==> feaser/openblt/Target/Source/TRICORE_TC2/mbrtu.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "Stm/Std/IfxStm.h"                      /* STM driver                         */
#include "IfxAsclin.h"                           /* ASCLIN basic driver                */
#define MBRTU_BYTE_TX_TIMEOUT_MS          (10u)
#define ASCLIN_CHANNEL   &MODULE_ASCLIN0
#define ASCLIN_CHANNEL   &MODULE_ASCLIN1
#define ASCLIN_CHANNEL   &MODULE_ASCLIN2
#define ASCLIN_CHANNEL   &MODULE_ASCLIN3

void MbRtuInit(void)
{
  blt_int16u startTimeTicks;
  blt_int16u deltaTimeTicks;
  blt_int16u currentTimeTicks;
  blt_int8u  rxDummy;

  /* The current implementation supports ASCLIN0 - ASCLIN3. Throw an assertion error in
   * case a different channel is configured.
   */
  ASSERT_CT((BOOT_COM_MBRTU_CHANNEL_INDEX == 0)  ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 1)  ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 2)  ||
            (BOOT_COM_MBRTU_CHANNEL_INDEX == 3));

  /* calculate the 3.5 character delay time in free running counter ticks. note that
   * the free running counter runs at 100 kHz, so one tick is 10 us. For baudrates >
   * 19200 bps, it can be fixed to 1750 us.
   */
  if (BOOT_COM_MBRTU_BAUDRATE > 19200)
  {
    /* set T3_5 time to a fixed value of 1750 us. */
    mbRtuT3_5Ticks = 175;
  }
  /* calculate the T3_5 time, because the baudrate is <= 19200 bps. */
  else
  {
    /* T3_5 [us * 10] = 3.5 * Tchar = 3.5 * 11 * 100000 / baudrate = 3850000 / baudrate.
     * make sure to do integer round up though. Make sure to add 1 to adjust for 10us
     * timer resolution inaccuracy.
     */
    mbRtuT3_5Ticks = (blt_int16u)(((3850000UL + (BOOT_COM_MBRTU_BAUDRATE - 1U)) /
                                    BOOT_COM_MBRTU_BAUDRATE) + 1);
  }

  /* Enable the ASCLIN module. */
  IfxAsclin_enableModule(ASCLIN_CHANNEL);
  /* Disable the clock before configuring the GPIO pins. */
  IfxAsclin_setClockSource(ASCLIN_CHANNEL, IfxAsclin_ClockSource_noClock);
  /* Configure the ASCLIN UART Tx and Rx pins. */
  IfxAsclin_initRxPin(mbRtuRxPin, IfxPort_InputMode_pullUp,
                      IfxPort_PadDriver_cmosAutomotiveSpeed1);
  IfxAsclin_initTxPin(mbRtuTxPin, IfxPort_OutputMode_pushPull,
                      IfxPort_PadDriver_cmosAutomotiveSpeed1);
  /* Enter initialization mode. */
  IfxAsclin_setFrameMode(ASCLIN_CHANNEL, IfxAsclin_FrameMode_initialise);
  /* Temporarily enable the clock source for the baudrate configuration. */
  IfxAsclin_setClockSource(ASCLIN_CHANNEL, IfxAsclin_ClockSource_ascFastClock);
  /* Configure the baudrate generator prescaler. */
  IfxAsclin_setPrescaler(ASCLIN_CHANNEL, 1);
  /* Configure the communication speed, while using an oversampling of 16 bits and sample
   * three bits in the middle (7,8 and 9).
   */
  (void)IfxAsclin_setBitTiming(ASCLIN_CHANNEL, (float32)BOOT_COM_MBRTU_BAUDRATE,
                               IfxAsclin_OversamplingFactor_16,
                               IfxAsclin_SamplePointPosition_9,
                               IfxAsclin_SamplesPerBit_three);
  /* Disable the clock again for now. */
  IfxAsclin_setClockSource(ASCLIN_CHANNEL, IfxAsclin_ClockSource_noClock);
  /* Disable loopback mode. */
  IfxAsclin_enableLoopBackMode(ASCLIN_CHANNEL, FALSE);
  /* Configure shift direction. */
  IfxAsclin_setShiftDirection(ASCLIN_CHANNEL, IfxAsclin_ShiftDirection_lsbFirst);
  /* Disable idle delay. */
  IfxAsclin_setIdleDelay(ASCLIN_CHANNEL, IfxAsclin_IdleDelay_0);
  /* Configure frame format format. */
#if (BOOT_COM_MBRTU_PARITY == 0)
  IfxAsclin_enableParity(ASCLIN_CHANNEL, FALSE);
#elif (BOOT_COM_MBRTU_PARITY == 1)
  IfxAsclin_enableParity(ASCLIN_CHANNEL, TRUE);
  IfxAsclin_setParityType(ASCLIN_CHANNEL, IfxAsclin_ParityType_odd);
#else
  IfxAsclin_enableParity(ASCLIN_CHANNEL, TRUE);
  IfxAsclin_setParityType(ASCLIN_CHANNEL, IfxAsclin_ParityType_even);
#endif
#if (BOOT_COM_MBRTU_STOPBITS == 1)
  IfxAsclin_setStopBit(ASCLIN_CHANNEL, IfxAsclin_StopBit_1);
#else
  IfxAsclin_setStopBit(ASCLIN_CHANNEL, IfxAsclin_StopBit_2);
#endif
  IfxAsclin_setDataLength(ASCLIN_CHANNEL, IfxAsclin_DataLength_8);
  /* Configure transmit FIFO. Use the "Combined Mode", 8-bit wide write and generate a
   * refill event when the filling level falls to 15 or below.
   */
  IfxAsclin_setTxFifoInletWidth(ASCLIN_CHANNEL, IfxAsclin_TxFifoInletWidth_1);
  IfxAsclin_setTxFifoInterruptLevel(ASCLIN_CHANNEL, IfxAsclin_TxFifoInterruptLevel_15);
  /* Configure the receive FIFO. Use the "Combined Mode", 8-bit wide read and generate
   * a drain event when the filling level rises to 1 or above.
   */
  IfxAsclin_setRxFifoOutletWidth(ASCLIN_CHANNEL, IfxAsclin_RxFifoOutletWidth_1);
  IfxAsclin_setRxFifoInterruptLevel(ASCLIN_CHANNEL, IfxAsclin_RxFifoInterruptLevel_1);
  /* Leave initialization mode and switch to ASC mode. */
  IfxAsclin_setFrameMode(ASCLIN_CHANNEL, IfxAsclin_FrameMode_asc);
  /* Enable the clock source. */
  IfxAsclin_setClockSource(ASCLIN_CHANNEL, IfxAsclin_ClockSource_ascFastClock);
  /* Disable and clear all event flags. */
  IfxAsclin_disableAllFlags(ASCLIN_CHANNEL);
  IfxAsclin_clearAllFlags(ASCLIN_CHANNEL);
  /* Enable the transmit and receive FIFOs. */
  IfxAsclin_enableRxFifoInlet(ASCLIN_CHANNEL, TRUE);
  IfxAsclin_enableTxFifoOutlet(ASCLIN_CHANNEL, TRUE);
  /* Flush the FIFOs. */
  IfxAsclin_flushRxFifo(ASCLIN_CHANNEL);
  IfxAsclin_flushTxFifo(ASCLIN_CHANNEL);

  /* enable the receiver output to be able to receive. */
  MbRtuDriverOutputControlHook(BLT_FALSE);

  /* wait for idle line detection. This is T3_5 time after reception of the last byte. */
  startTimeTicks = MbRtuFreeRunningCounterGet();
  do
  {
    /* service the watchdog. */
    CopService();
    /* get the current value of the free running counter. */
    currentTimeTicks = MbRtuFreeRunningCounterGet();
    /* check if a byte was received while waiting for the idle line. */
    if (MbRtuReceiveByte(&rxDummy) == BLT_TRUE)
    {
      /* restart the idle line detection. */
      startTimeTicks = currentTimeTicks;
    }
    /* calculate the number of ticks that elapsed since the start or since the last
     * byte reception. Note that this calculation works, even if the free running counter
     * overflowed.
     */
    deltaTimeTicks = currentTimeTicks - startTimeTicks;
  }
  while (deltaTimeTicks < mbRtuT3_5Ticks);
}

static blt_bool MbRtuReceiveByte(blt_int8u *data)
{
  blt_bool result = BLT_FALSE;

  /* poll the receive FIFO level to see if new data is available. */
  if (IfxAsclin_getRxFifoFillLevel(ASCLIN_CHANNEL) > 0)
  {
    /* update the result */
    result = BLT_TRUE;
    /* check for a frame error. the frame error check is important because it can detect
     * a missing stopbit. on an RS485 bus without bias resistors, the A-B differential
     * voltage is 0. for an RS485 transceiver this is neither a 0 nor a 1 bit, so
     * undefined. most RS485 transceivers feature a reception failsafe function to drive
     * the Rx output (going to the UART Rx) to a defined state of logic 1. in case the
     * used RS485 transceiver doesn't have such a feature, it typically leaves the Rx
     * output in a logic 0 state. this means that after the stop bit of the last packet
     * byte, the UART Rx input sees a logic 0, and assumes it is a start bit. the
     * remaining data bits will always be 0 and, most importantly no stop bit is
     * present, causing a framing error. Long story short: if you don't check for the
     * framing error flag, you might receive an extra byte with value 0, which is not
     * actually transmitted on the RS485 bus. you can catch and ignore this byte by doing
     * a frame error check.
     */
    if (IfxAsclin_getFrameErrorFlagStatus(ASCLIN_CHANNEL) != 0)
    {
      /* clear the frame error flag. */
      IfxAsclin_clearFrameErrorFlag(ASCLIN_CHANNEL);
      /* ignore the byte because of a detected frame error. */
      result = BLT_FALSE;
    }
    #if (BOOT_COM_MBRTU_PARITY > 0)
    /* check for a parity error. */
    if (IfxAsclin_getParityErrorFlagStatus(ASCLIN_CHANNEL) != 0)
    {
      /* clear the parity error flag. */
      IfxAsclin_clearParityErrorFlag(ASCLIN_CHANNEL);
      /* ignore the byte because of a detected parity error. */
      result = BLT_FALSE;
    }
    #endif
    /* retrieve and store the newly received byte */
    (void)IfxAsclin_read8(ASCLIN_CHANNEL, data, 1);
  }
  /* give the result back to the caller */
  return result;
}

static void MbRtuTransmitByte(blt_int8u data, blt_bool end_of_packet)
{
  blt_int32u timeout;

  /* clear the transmit completed flag. */
  IfxAsclin_clearTransmissionCompletedFlag(ASCLIN_CHANNEL);
  /* write the data value to the ASCLIN peripheral's transmit FIFO. */
  (void)IfxAsclin_write8(ASCLIN_CHANNEL, &data, 1);
  /* set timeout time to wait for transmit completion. */
  timeout = TimerGet() + MBRTU_BYTE_TX_TIMEOUT_MS;

  /* not the last byte of the packet? */
  if (end_of_packet == BLT_FALSE)
  {
    /* wait for the transmit FIFO to be empty. */
    while (IfxAsclin_getTxFifoFillLevel(ASCLIN_CHANNEL) != 0)
    {
      /* keep the watchdog happy. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
  /* this is the last byte of a packet. */
  else
  {
    /* wait for tx complete flag to be set. this is needed for the last byte, otherwise
     * the transceiver's transmit output gets disabled with 
     * MbRtuDriverOutputControlHook() before the byte reception completes. 
     */
    while (IfxAsclin_getTransmissionCompletedFlagStatus(ASCLIN_CHANNEL) != 0)
    {
      /* keep the watchdog happy. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
}

blt_int16u MbRtuFreeRunningCounterGet(void)
{
  static blt_bool initialized = BLT_FALSE;
  static blt_int32u counts_per_ten_us = 0;
  static blt_int32u free_running_counter_last = 0;
  static blt_int16u ten_us_tick_counter = 0;
  blt_int32u free_running_counter_now;
  blt_int32u delta_counts;
  blt_int32u ten_us_ticks;

  /* perform one-time initialization.*/
  if (initialized == BLT_FALSE)
  {
    /* set the flag to make sure that this part only runs once. */
    initialized = BLT_TRUE;
    /* calculate how many counts of the SysTick's free running counter equals 10us,
     * because one count of a 100 kHz counter equals that. Note that the timer module
     * already initialized and enabled the SysTick.
     */
    counts_per_ten_us = IfxStm_getFrequency(&MODULE_STM0) / 100000U;
    /* initialize current value of the timer's free running counter. */
    free_running_counter_last = IfxStm_getLower(&MODULE_STM0);
  }

  /* get the current value of the free running counter. */
  free_running_counter_now = IfxStm_getLower(&MODULE_STM0);
  /* Calculate the number of counts that passed since the detection of the last
   * millisecond event. Keep in mind that the SysTick has a down-counting 24-bit free
   * running counter. Note that this calculation also works, in case the free running
   * counter overflowed, thanks to integer math.
   */
  delta_counts = free_running_counter_now - free_running_counter_last;

  /* did one or more ten microsecond counts pass since the last event? */
  if (delta_counts >= counts_per_ten_us)
  {
    /* calculate how many ten microsecond counts passed. */
    ten_us_ticks = delta_counts / counts_per_ten_us;
    /* update the counter. */
    ten_us_tick_counter += ten_us_ticks;
    /* store the counter value of the last event to detect the next one. */
    free_running_counter_last += (ten_us_ticks * counts_per_ten_us);
  }

  /* return the current value of the 100 kHz free running counter to the caller. */
  return ten_us_tick_counter;
}
